--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      color: white;
     }
 
     .container {
-      max-width: 600px;
-      margin: 60px auto;
+      max-width: 700px;
+      margin: 50px auto;
       background-color: #111;
       padding: 40px;
       border-radius: 10px;
-      color: #fff;
     }
 
     .logo {
@@ -28,7 +28,7 @@
     }
 
     .logo img {
-      width: 150px; /* ALTERADO: reduz tamanho da imagem */
+      width: 150px;
       display: block;
       margin: 0 auto;
     }
@@ -53,12 +53,13 @@
     label {
       display: block;
       margin-top: 20px;
-      color: white;
       font-weight: bold;
     }
 
     input[type="text"],
-    input[type="date"] {
+    input[type="date"],
+    textarea,
+    select {
       width: 100%;
       padding: 12px;
       margin-top: 6px;
@@ -99,7 +100,6 @@
 
     .success {
       text-align: center;
-      margin-top: 100px;
     }
 
     .success h1 {
@@ -114,7 +114,7 @@
 </head>
 <body>
 
-<div class="container" id="formulario">
+<div class="container" id="form1">
   <div class="logo">
     <img src="logo-periferia.png" alt="Logo Periferia">
   </div>
@@ -124,7 +124,7 @@
 
   <form id="staffForm">
     <label for="nome">Nome Completo *</label>
-    <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required>
+    <input type="text" id="nome" name="nome" required>
 
     <label for="nascimento">Data de Nascimento *</label>
     <input type="date" id="nascimento" name="nascimento" required>
@@ -139,7 +139,94 @@
     </div>
 
     <label for="discord">Seu Discord *</label>
-    <input type="text" id="discord" name="discord" placeholder="Ex: usuario#0000" required>
+    <input type="text" id="discord" name="discord" required>
+
+    <button type="button" onclick="mostrarPerguntas()">Próximo</button>
+  </form>
+</div>
+
+<div class="container" id="form2" style="display: none;">
+  <div class="logo">
+    <img src="logo-periferia.png" alt="Logo Periferia">
+  </div>
+
+  <h1>Formulário <span>Staff</span></h1>
+  <h2>Perguntas complementares</h2>
+
+  <form id="perguntasForm">
+    <label>1. Por que você deseja fazer parte da equipe staff da Vice?</label>
+    <textarea name="q1" required></textarea>
+
+    <label>2. Qual sua experiência prévia como staff em outros servidores?</label>
+    <textarea name="q2" required></textarea>
+
+    <label>3. Quantas horas por dia você pode dedicar ao servidor?</label>
+    <select name="q3" required>
+      <option value="">Selecione</option>
+      <option>Menos de 2 horas</option>
+      <option>2-4 horas</option>
+      <option>4-6 horas</option>
+      <option>Mais de 6 horas</option>
+    </select>
+
+    <label>4. Você já teve experiência com comandos de administração no FiveM?</label>
+    <select name="q4" required>
+      <option value="">Selecione</option>
+      <option>Sim, tenho bastante experiência</option>
+      <option>Sim, tenho alguma experiência</option>
+      <option>Não, mas aprendo rápido</option>
+      <option>Não tenho experiência</option>
+    </select>
+
+    <label>5. Como você lidaria com uma situação de conflito entre jogadores?</label>
+    <textarea name="q5" required></textarea>
+
+    <label>6. Você já foi staff em algum lugar? Se sim, qual foi sua experiência e por que saiu?</label>
+    <textarea name="q6" required></textarea>
+
+    <label>7. Você entende e concorda com todas as regras do servidor?</label>
+    <select name="q7" required>
+      <option value="">Selecione</option>
+      <option>Sim, entendo e concordo com todas</option>
+      <option>Sim, mas tenho dúvidas em algumas</option>
+      <option>Não conheço todas ainda</option>
+      <option>Não concordo com algumas</option>
+    </select>
+
+    <label>8. Você lida bem com hierarquia? Explique:</label>
+    <textarea name="q8" required></textarea>
+
+    <label>9. Consegue diferenciar amizade/rp de staff caso tenha que aplicar alguma punição?</label>
+    <textarea name="q9" required></textarea>
+
+    <label>10. Explique com suas palavras o que é RDM:</label>
+    <textarea name="q10" required></textarea>
+
+    <label>11. Explique com suas palavras o que é metagaming:</label>
+    <textarea name="q11" required></textarea>
+
+    <label>12. Você vê outro staff quebrando alguma regra, o que você faria?</label>
+    <textarea name="q12" required></textarea>
+
+    <label>13. Tem ciência que suas ações poderão resultar em banimentos ou exoneração?</label>
+    <select name="q13" required>
+      <option value="">Selecione</option>
+      <option>Sim, estou ciente</option>
+      <option>Não, gostaria de mais informações</option>
+      <option>Tenho dúvidas sobre isso</option>
+    </select>
+
+    <label>14. Caso você seja punido ou exonerado da staff, como lidaria com isso?</label>
+    <select name="q14" required>
+      <option value="">Selecione</option>
+      <option>Aceitaria e respeitaria a decisão</option>
+      <option>Questionaria a decisão de forma respeitosa</option>
+      <option>Ficaria decepcionado, mas entenderia</option>
+      <option>Não aceitaria bem</option>
+    </select>
+
+    <label>15. Como você acha que deve ser a postura de um staff?</label>
+    <textarea name="q15" required></textarea>
 
     <button type="submit">Enviar</button>
   </form>
@@ -149,14 +236,11 @@
   <div class="logo">
     <img src="logo-periferia.png" alt="Logo Periferia">
   </div>
-
   <h1>Formulário <span>Staff</span></h1>
-  <h2>Formulário enviado.</h2>
-  <p>A equipe entrará em contato pelo seu Discord para marcar uma entrevista. Desde já, obrigado pela inscrição.</p>
+  <p class="success-msg">A equipe entrará em contato pelo seu Discord para marcar uma entrevista. Desde já, obrigado pela inscrição.</p>
 </div>
 
 <script>
-  const form = document.getElementById('staffForm');
   const nascimento = document.getElementById('nascimento');
   const idade = document.getElementById('idade');
 
@@ -165,16 +249,27 @@
     const today = new Date();
     let age = today.getFullYear() - birthDate.getFullYear();
     const m = today.getMonth() - birthDate.getMonth();
-
     if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
       age--;
     }
-
     idade.value = age;
   });
 
-  form.addEventListener('submit', async (e) => {
+  function mostrarPerguntas() {
+    const form1 = document.getElementById("staffForm");
+    if (!form1.checkValidity()) {
+      form1.reportValidity();
+      return;
+    }
+    document.getElementById("form1").style.display = "none";
+    document.getElementById("form2").style.display = "block";
+  }
+
+  document.getElementById("perguntasForm").addEventListener("submit", async function (e) {
     e.preventDefault();
+
+    const f1 = document.getElementById("staffForm");
+    const f2 = this;
 
     const data = {
       content: "**Nova inscrição de staff**",
@@ -183,11 +278,26 @@
           title: "Informações do Candidato",
           color: 16711680,
           fields: [
-            { name: "Nome", value: form.nome.value, inline: false },
-            { name: "Data de Nascimento", value: form.nascimento.value, inline: true },
-            { name: "Idade", value: form.idade.value, inline: true },
-            { name: "ID Liberado na Cidade", value: form.temId.checked ? "Sim" : "Não", inline: true },
-            { name: "Seu Discord", value: form.discord.value, inline: false }
+            { name: "Nome", value: f1.nome.value },
+            { name: "Data de Nascimento", value: f1.nascimento.value },
+            { name: "Idade", value: f1.idade.value },
+            { name: "ID Liberado na Cidade", value: f1.temId.checked ? "Sim" : "Não" },
+            { name: "Discord", value: f1.discord.value },
+            { name: "1", value: f2.q1.value },
+            { name: "2", value: f2.q2.value },
+            { name: "3", value: f2.q3.value },
+            { name: "4", value: f2.q4.value },
+            { name: "5", value: f2.q5.value },
+            { name: "6", value: f2.q6.value },
+            { name: "7", value: f2.q7.value },
+            { name: "8", value: f2.q8.value },
+            { name: "9", value: f2.q9.value },
+            { name: "10", value: f2.q10.value },
+            { name: "11", value: f2.q11.value },
+            { name: "12", value: f2.q12.value },
+            { name: "13", value: f2.q13.value },
+            { name: "14", value: f2.q14.value },
+            { name: "15", value: f2.q15.value }
           ],
           footer: { text: "Periferia RP" },
           timestamp: new Date().toISOString()
@@ -201,8 +311,8 @@
       body: JSON.stringify(data)
     });
 
-    document.getElementById('formulario').style.display = "none";
-    document.getElementById('sucesso').style.display = "block";
+    document.getElementById("form2").style.display = "none";
+    document.getElementById("sucesso").style.display = "block";
   });
 </script>
 
