--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <h2>Perguntas para candidatura</h2>
 
   <form id="perguntasForm">
-    <label>1. Por que você deseja fazer parte da equipe staff da Vice?</label>
+    <label>1. Por que você deseja fazer parte da equipe staff da Periferia?</label>
     <textarea name="pergunta1" required></textarea>
 
     <label>2. Qual sua experiência prévia como staff em outros servidores?</label>
